versions inlinded