@@ -21,15 +21,6 @@
     </modules>
 
     <properties>
-        <commons-lang3.version>3.6</commons-lang3.version>
-        <guava.version>25.1-jre</guava.version>
-        <jackson.version>2.9.5</jackson.version>
-        <junit.version>4.12</junit.version>
-        <lombok.version>1.16.22</lombok.version>
-        <mockito.version>2.17.0</mockito.version>
-        <spring.version>5.0.5.RELEASE</spring.version>
-        <spring.boot.version>2.0.2.RELEASE</spring.boot.version>
-        <slf4j-api.version>1.7.25</slf4j-api.version>
         <junit-excluded-groups/>
         <surefireArgLine/>
     </properties>
@@ -39,12 +30,12 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>${slf4j-api.version}</version>
+                <version>1.7.28</version>
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
+                <version>1.16.22</version>
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
@@ -53,39 +44,39 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>${commons-lang3.version}</version>
+                <version>3.8.1</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>${guava.version}</version>
+                <version>25.1-jre</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
-                <version>${spring.version}</version>
+                <version>5.0.5.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
-                <version>${jackson.version}</version>
+                <version>2.9.5</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
+                <version>4.12</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava-testlib</artifactId>
-                <version>${guava.version}</version>
+                <version>25.1-jre</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>${mockito.version}</version>
+                <version>2.17.0</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -150,7 +141,6 @@
                     <compilerArgs>
                         <arg>-Xlint:all</arg>
                         <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
                     </compilerArgs>
                     <fork>true</fork>
                 </configuration>
